data/derived/fa15/progs/unify/prog3916.ml.out
Characters 67-68:
  | h::t -> if getHeads x = [] 
                        ^
Error: This expression has type string but an expression was expected of type
         'a list
